fix: Feedback report pre block wrap words

--- a/amfs/static/feedback.css
+++ b/amfs/static/feedback.css
@@ -62,6 +62,10 @@ a {
     border-left: 2px solid var(--primary);
     padding: 0 1rem 0 1rem;
     margin: 0.5rem 1rem 0.75rem 1rem;
+    white-space: pre-wrap;       /* Since CSS 2.1 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
 }
 
 @page {
